# oversight-audit

./: .gitignore  .~lock.README.md#  CITATION.cff  LICENSE  METHODOLOGY.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: check.tape  demo-transcript.md  demo.tape  estimate-transcript.md  instrumented-log-format.md  sensitivity-transcript.md
examples/: deliberative_export.json  instrumented_schema.json  queue_export.json  typical_audit_schema.json
oversight_audit/: __init__.py  __main__.py  demo.py  estimate.py  generate.py  reveal.py  schema_audit.py  sensitivity.py  signals.py
tests/: test_oversight_audit.py
